Preventing main container from wrapping under ea banner
43 px because
* .ea-placement has `10px` + `12px` padding on top/bottom
* .ea-text has a size of `14px` plus a 1.5 line height (`7px`)
* 10 + 12 + 14 + 7 = 43

--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -15,7 +15,7 @@ html.debug:before {
 main {
   display: block;
   position: relative;
-  height: 100%;
+  height: calc(100% - 43px);
 }
 
 .toppanel main {
